--- a/app/src/main/res/layout/assign_librarian.xml
+++ b/app/src/main/res/layout/assign_librarian.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_admin"
-    tools:context=".user_home_pages.AdminHomePage">
+    tools:context=".pages.AssignLibrarianPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,14 +58,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin2"
-                android:layout_marginBottom="8dp"
                 android:text="Enter Member ID below to assign"
                 android:textColor="@color/textWhite"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/unlock_user_id"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.01"
                 tools:ignore="MissingConstraints" />
 
             <EditText
@@ -73,8 +75,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:backgroundTint="@color/textWhite"
                 android:drawableStart="@drawable/ic_user_white_24dp"
                 android:drawablePadding="15dp"
@@ -83,10 +83,12 @@
                 android:paddingBottom="16dp"
                 android:textColor="@color/textWhite"
                 android:textColorHint="@color/textWhite"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.75"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="179dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.293"
                 tools:ignore="MissingConstraints" />
 
             <Button
@@ -94,18 +96,18 @@
                 android:layout_width="match_parent"
                 android:layout_height="49dp"
                 android:layout_margin="24dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:background="@drawable/btn_corner"
                 android:onClick="assignLibrarianOnClick"
                 android:text="Assign Librarian"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.2"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="425dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.801"
+                tools:ignore="MissingConstraints" />
 
 
         </android.support.constraint.ConstraintLayout>
