--- a/app/src/main/res/layout/issue_fine_admin.xml
+++ b/app/src/main/res/layout/issue_fine_admin.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_admin"
-    tools:context=".user_home_pages.LibrarianHomePage">
+    tools:context=".pages.IssueFinePage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -49,6 +49,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="623dp"
+            android:layout_alignParentEnd="true"
             android:layout_gravity="bottom"
             android:layout_margin="@dimen/activity_horizontal_margin2"
             android:layout_weight=".75"
@@ -61,16 +62,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin2"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="116dp"
-                android:layout_marginBottom="8dp"
                 android:text="Enter Member ID and Fine Amount"
                 android:textColor="@color/textWhite"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/issue_fine_member_id_admin"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/issue_fine_amount_admin"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="MissingConstraints" />
 
 
@@ -80,8 +81,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:backgroundTint="@color/textWhite"
                 android:drawableStart="@drawable/ic_user_white_24dp"
                 android:drawablePadding="15dp"
@@ -90,11 +89,13 @@
                 android:paddingBottom="16dp"
                 android:textColor="@color/textWhite"
                 android:textColorHint="@color/textWhite"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.75"
+                app:layout_constraintHorizontal_bias="0.375"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="167dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.2"
+                tools:ignore="MissingConstraints" />
 
             <EditText
                 android:id="@+id/issue_fine_amount_admin"
@@ -102,8 +103,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:backgroundTint="@color/textWhite"
                 android:drawableStart="@drawable/ic_money_white_24dp"
                 android:drawablePadding="15dp"
@@ -112,11 +111,13 @@
                 android:paddingBottom="16dp"
                 android:textColor="@color/textWhite"
                 android:textColorHint="@color/textWhite"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.75"
+                app:layout_constraintHorizontal_bias="0.625"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="316dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.376"
+                tools:ignore="MissingConstraints" />
 
             <Button
                 android:id="@+id/issue_fine_admin_button"
@@ -126,15 +127,17 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/btn_corner"
-                android:onClick="issueFineOnClickAdmin"
+                android:onClick="issueFineOnClick"
                 android:text="Issue Fine"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="483dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.843"
+                tools:ignore="MissingConstraints" />
 
 
         </android.support.constraint.ConstraintLayout>
