--- a/app/src/main/res/layout/set_fine.xml
+++ b/app/src/main/res/layout/set_fine.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_admin"
-    tools:context=".user_home_pages.AdminHomePage">
+    tools:context=".pages.SetFinePage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,14 +58,16 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin2"
-                android:layout_marginBottom="8dp"
                 android:text="Enter Fine information below"
                 android:textColor="@color/textWhite"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/set_fine_id"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/set_fine_load_id"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
                 tools:ignore="MissingConstraints" />
 
             <EditText
@@ -84,11 +86,13 @@
                 android:paddingBottom="16dp"
                 android:textColor="@color/textWhite"
                 android:textColorHint="@color/textWhite"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.25"
+                app:layout_constraintHorizontal_bias="0.75"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="216dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.225"
+                tools:ignore="MissingConstraints" />
 
             <EditText
                 android:id="@+id/set_fine_load_id"
@@ -141,18 +145,18 @@
                 android:layout_height="49dp"
                 android:layout_gravity="bottom"
                 android:layout_margin="24dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:background="@drawable/btn_corner"
-                android:onClick="unlockUserOnClick"
+                android:onClick="setFineOnClick"
                 android:text="Set Fine"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.6"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="499dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.811"
+                tools:ignore="MissingConstraints" />
 
 
         </android.support.constraint.ConstraintLayout>
