--- a/app/src/main/res/layout/unlock_user.xml
+++ b/app/src/main/res/layout/unlock_user.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/background_admin"
-    tools:context=".user_home_pages.AdminHomePage">
+    tools:context=".pages.UnlockUserPage">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -48,6 +48,8 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="623dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
             android:layout_gravity="bottom"
             android:layout_margin="@dimen/activity_horizontal_margin2"
             android:layout_weight=".75"
@@ -55,17 +57,20 @@
             android:padding="16dp">
 
             <TextView
+                android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="@dimen/activity_horizontal_margin2"
-                android:layout_marginBottom="8dp"
                 android:text="Enter User ID below to unlock"
                 android:textColor="@color/textWhite"
                 android:textSize="18sp"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@+id/unlock_user_id"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.026"
                 tools:ignore="MissingConstraints" />
 
             <EditText
@@ -74,8 +79,6 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="bottom"
                 android:layout_margin="16dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
                 android:backgroundTint="@color/textWhite"
                 android:drawableStart="@drawable/ic_user_white_24dp"
                 android:drawablePadding="15dp"
@@ -84,10 +87,12 @@
                 android:paddingBottom="16dp"
                 android:textColor="@color/textWhite"
                 android:textColorHint="@color/textWhite"
+                app:layout_constraintBottom_toTopOf="@+id/unlock_user_button"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.75"
+                app:layout_constraintHorizontal_bias="0.25"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:layout_editor_absoluteY="179dp"
+                app:layout_constraintTop_toBottomOf="@+id/textView3"
+                app:layout_constraintVertical_bias="0.304"
                 tools:ignore="MissingConstraints" />
 
             <Button
@@ -96,18 +101,19 @@
                 android:layout_height="49dp"
                 android:layout_gravity="bottom"
                 android:layout_margin="24dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginEnd="8dp"
+                android:layout_marginTop="40dp"
                 android:background="@drawable/btn_corner"
                 android:onClick="unlockUserOnClick"
                 android:text="Unlock User"
                 android:textColor="@android:color/white"
                 android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.6"
                 app:layout_constraintStart_toStartOf="parent"
-                tools:ignore="MissingConstraints"
-                tools:layout_editor_absoluteY="425dp" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.747"
+                tools:ignore="MissingConstraints" />
 
 
         </android.support.constraint.ConstraintLayout>
